syntax = "proto3";

option csharp_namespace = "InlayTester.Api.Contracts";

import "users/role.proto";


message ApiUser {
    string id = 1;
    string name = 2;
    string notes = 3;
    repeated ApiRole roles = 4;
    string modified_by = 5;
    string modified_on = 6;
}

message ApiUserWithPassword {
    ApiUser user = 1;
    string password = 2;
}
