syntax = "proto3";

option csharp_namespace = "InlayTester.Api.Contracts";

import "users/user.proto";
import "users/role.proto";


service ApiUserService {
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc ContainsUserName (ContainsUserNameRequest) returns (ContainsUserNameResponse);
    rpc QueryUsers (QueryUsersRequest) returns (QueryUsersResponse);
    rpc QueryRoles (QueryRolesRequest) returns (QueryRolesResponse);
}


message AddUserRequest {
    ApiUserWithPassword user = 1;
}

message AddUserResponse {
    bool added = 1;
}


message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool deleted = 1;
}


message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    oneof optional {
        ApiUserWithPassword user = 1;
    }
}


message UpdateUserRequest {
    ApiUserWithPassword user = 1;
}

message UpdateUserResponse {
    bool updated = 1;
}


message ContainsUserNameRequest {
    string name = 1;
}

message ContainsUserNameResponse {
    bool contains = 1;
}


message QueryUsersRequest {
}

message QueryUsersResponse {
    repeated ApiUser users = 1;
}


message QueryRolesRequest {
}

message QueryRolesResponse {
    repeated ApiRole roles = 1;
}
